--- a/config.toml
+++ b/config.toml
@@ -75,11 +75,8 @@ disqusShortname = ""
   [params.banner]
     # To change the background image on the homepage banner, replace 'banner.jpg' in
     # the 'static/img' folder.
-    title = "Ted Laderas, PhD"
-    subtitle = "Portfolio of Data Science and Visualization Projects"
-    buttonText = "Curriculum Vitae"
-    url = "cv/"
-
+    title = "Matt Reilly"
+    subtitle = "Portfolio of Recent Projects"
 
   # Tiles Section
   [params.tiles]
@@ -116,50 +113,30 @@ disqusShortname = ""
     # by copying the corresponding map with frontmatter code.
     [[params.contact.email]]
     title = "Email"
-    email = "tedladeras (at) gmail.com"
+    email = "reilly22 (at) gmail.com"
 
     [[params.contact.phone]]
     title = "Phone"
-    phone = "(000) 000-0000 x1234"
-
-    [[params.contact.address]]
-    title = "Address"
-    street = "3181 SW Sam Jackson Road"
-    city = "Portland, OR 97212"
-    country = "USA"
+    phone = "(630) 607-2245 "
+"
 
   # Footer section
   [params.footer]
     enable = true
-    copyright = "Ted Laderas"
+    copyright = "Matt Reilly"
 
     # Uses font awesome icons
     [[params.footer.social]]
       icon = "fa-twitter"
-      url= "https://www.twitter.com/tladeras"
+      url= "https://www.twitter.com/reilly22"
       label = "Twitter"
-
-    #[[params.footer.social]]
-     # icon = "fa-facebook"
-      #url= "https://www.facebook.com"
-      #label = "Facebook"
-
-    #[[params.footer.social]]
-     # icon = "fa-instagram"
-      #url= "https://www.instagram.com"
-      #label = "Instagram"
     
     [[params.footer.social]]
       icon = "fa-github"
-      url= "https://www.github.com/laderast"
+      url= "https://www.github.com/reilly22"
       label = "GitHub"
 
     [[params.footer.social]]
       icon = "fa-linkedin"
-      url= "https://www.linkedin.com/in/ted-laderas-0714a92/"
+      url= "https://www.linkedin.com/in/reilly22/"
       label = "LinkedIn"
-
-    [[params.footer.quicklinks]]
-      text = "Design: "
-      url= "https://www.html5up.net"
-      alt = "HTML5 UP"
