--- a/config.toml
+++ b/config.toml
@@ -42,6 +42,7 @@ disqusShortname = ""
     title = "Matt Reilly"
     subtitle = "Industrial Engineering, Data Analytics"
     menu = "Menu"
+    url = 'reilly22.github.io'
     # Optional logo as brand stored in img/
     # logo = "logo.png"
 
