--- a/config.toml
+++ b/config.toml
@@ -40,7 +40,7 @@ disqusShortname = ""
   # Navigation Section
   [params.navigation]
     title = "Matt Reilly"
-    url = "reilly22.github.io"
+    url = "https://reilly22.github.io"
     subtitle = "Industrial Engineering, Data Analytics"
 
     # Add custom links here by uncommenting code below. To remove links just delete
