--- a/config.toml
+++ b/config.toml
@@ -46,9 +46,9 @@ disqusShortname = ""
     # Add custom links here by uncommenting code below. To remove links just delete
     # the [[params.navigation.links]] map associated with that link. Copy and paste
     # code below if you need more links. Buttons work in the same way.
-    # [[params.navigation.links]]
-    #    name = "NameOfLink"
-    #    url = "UrlOfLink"
+    [[params.navigation.links]]
+       name = "Home"
+       url = "https://reilly22.github.io"
 
     # Button Style 1
     #[[params.navigation.button1]]
